2007-01-23  Kevin Cozens  <kcozens@cvs.gnome.org>

	* app/actions/context-actions.c
	* app/actions/tools-actions.c: s/minumum/minimum/ typo
	spotted by Joao S. O. Bueno Calligaris.

2007-01-23  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.3.15.

2007-01-23  Sven Neumann  <sven@gimp.org>

	* Made 2.3.14 development release.

2007-01-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/compose.c (type_combo_callback): code cleanup.

2007-01-23  Sven Neumann  <sven@gimp.org>

	* app/main.c: improved output.

	* docs/gimp.1.in
	* docs/gimp-remote.1.in: document the new behaviour and
	command-line parameter.

2007-01-23  Sven Neumann  <sven@gimp.org>

	* app/widgets/dbus-service.xml: added Activate method.

	* app/widgets/gimpdbusservice.[ch]: raise the toolbox from the
	Activate method. Do nothing when no URIs are passed.

	* app/main.c: try the Activate method on the org.gimp.GIMP service
	when being called without any filenames on the command-lines.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* app/main.c: simplified handling of d-bus errors.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* app/file/file-open.[ch]: added utility function that handles
	opening files passed on the command-line.

	* app/app_procs.c
	* app/widgets/gimpdbusservice.c: use the new function instead of
	duplicating the code.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* libgimp/gimppixbuf.c (gimp_pixbuf_from_data): free the thumbnail
	data that used to be leaked for grayscale thumbnails.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpui.c (gimp_ui_init): no need to construct (and leak)
	command-line arguments when initializing GTK+.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* app/paint/gimppaintbrush.c: added some comments.

	* app/paint/gimppaintcore.c: sprinkled with const qualifiers.

2007-01-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdatafactoryview.c: don't add the open-as-image
	button to all data factory views.
