@@ -1270,8 +1270,10 @@ gimp_rectangle_tool_key_press (GimpTool    *tool,
 {
   GimpRectangleTool        *rectangle;
   GimpRectangleToolPrivate *private;
-  gint                      inc_x = 0;
-  gint                      inc_y = 0;
+  gint                      inc_x1 = 0;
+  gint                      inc_y1 = 0;
+  gint                      inc_x2 = 0;
+  gint                      inc_y2 = 0;
 
   g_return_val_if_fail (GIMP_IS_RECTANGLE_TOOL (tool), FALSE);
 
@@ -1284,18 +1286,73 @@ gimp_rectangle_tool_key_press (GimpTool    *tool,
   switch (kevent->keyval)
     {
     case GDK_Up:
-      inc_y = -1;
+      if (kevent->state & GDK_CONTROL_MASK)
+        {
+          if (kevent->state & GDK_SHIFT_MASK)
+            {
+              inc_y2 = -1;
+            }
+          else
+            {
+              inc_y1 = -1;
+            }
+        }
+      else
+        {
+          inc_y1 = inc_y2 = -1;
+        }
       break;
     case GDK_Left:
-      inc_x = -1;
+      if (kevent->state & GDK_CONTROL_MASK)
+        {
+          if (kevent->state & GDK_SHIFT_MASK)
+            {
+              inc_x2 = -1;
+            }
+          else
+            {
+              inc_x1 = -1;
+            }
+        }
+      else
+        {
+          inc_x1 = inc_x2 = -1;
+        }
       break;
     case GDK_Right:
-      inc_x = 1;
+      if (kevent->state & GDK_CONTROL_MASK)
+        {
+          if (kevent->state & GDK_SHIFT_MASK)
+            {
+              inc_x1 = 1;
+            }
+          else
+            {
+              inc_x2 = 1;
+            }
+        }
+      else
+        {
+          inc_x1 = inc_x2 = 1;
+        }
       break;
     case GDK_Down:
-      inc_y = 1;
+      if (kevent->state & GDK_CONTROL_MASK)
+        {
+          if (kevent->state & GDK_SHIFT_MASK)
+            {
+              inc_y1 = 1;
+            }
+          else
+            {
+              inc_y2 = 1;
+            }
+        }
+      else
+        {
+          inc_y1 = inc_y2 = 1;
+        }
       break;
-
     case GDK_KP_Enter:
     case GDK_Return:
       if (gimp_rectangle_tool_execute (rectangle))
@@ -1313,19 +1370,21 @@ gimp_rectangle_tool_key_press (GimpTool    *tool,
     }
 
   /*  If the shift key is down, move by an accelerated increment  */
-  if (kevent->state & GDK_SHIFT_MASK)
+  if (kevent->state & GDK_SHIFT_MASK && !( kevent->state & GDK_CONTROL_MASK ))
     {
-      inc_y *= ARROW_VELOCITY;
-      inc_x *= ARROW_VELOCITY;
+      inc_y1 *= ARROW_VELOCITY;
+      inc_x1 *= ARROW_VELOCITY;
+      inc_y2 *= ARROW_VELOCITY;
+      inc_x2 *= ARROW_VELOCITY;
     }
 
   gimp_draw_tool_pause (GIMP_DRAW_TOOL (tool));
 
   g_object_set (rectangle,
-                "x1", private->x1 + inc_x,
-                "y1", private->y1 + inc_y,
-                "x2", private->x2 + inc_x,
-                "y2", private->y2 + inc_y,
+                "x1", private->x1 + inc_x1,
+                "y1", private->y1 + inc_y1,
+                "x2", private->x2 + inc_x2,
+                "y2", private->y2 + inc_y2,
                 NULL);
 
   gimp_rectangle_tool_configure (rectangle);
